@@ -1,3 +1,9 @@
+2004-02-09  Andras Varga
+
+	* omnetapp.cc/h: preload-ned-files= omnetpp.ini option now supports
+	list files (@nedfiles.lst), even recursive ones (list files may refer
+	to other list files).
+
 2004-02-04  ------ omnetpp-3.0pre1 released ------
 
 2004-01-09  Andras Varga
